--- a/notifico/views/account/templates/login.html
+++ b/notifico/views/account/templates/login.html
@@ -1,26 +1,17 @@
-{% extends "body.html" %}
+{% extends "no_sidebar.html" %}
 {% import "ui/forms.html" as forms %}
-{% block content %}
-<div class="container page-content">
-  <div class="row-fluid">
-    <div class="span12">
-      <section>
-        <header>
-          <h2>Login</h2>
-        </header>
-        <div class="section-content">
-          <form class="form form-horizontal" method='POST' action="{{ request.url }}">
-            {{ form.hidden_tag() }}
-            {{ forms.render_field(form.username) }}
-            {{ forms.render_field(form.password) }}
-            <div class="form-actions">
-              <button type="submit" class="btn btn-primary">Login</button>
-              <a href="{{ url_for('.register') }}" class="btn">Register</a>
-            </div>
-          </form>
-        </div>
-      </section>
-    </div>
+
+{% block content_page %}
+  <h2>Login</h2>
+  <div class="section-content">
+    <form class="form form-horizontal" method='POST' action="{{ request.url }}">
+      {{ form.hidden_tag() }}
+      {{ forms.render_field(form.username) }}
+      {{ forms.render_field(form.password) }}
+      <div class="form-actions">
+        <button type="submit" class="btn btn-primary">Login</button>
+        <a href="{{ url_for('.register') }}" class="btn">Register</a>
+      </div>
+    </form>
   </div>
-</div>
 {% endblock %}
