--- a/notifico/views/admin/templates/admin_projects.html
+++ b/notifico/views/admin/templates/admin_projects.html
@@ -1,45 +1,35 @@
-{% extends "body.html" %}
+{% extends "no_sidebar.html" %}
 {% from 'ui/page.html' import render_pagination %}
 
-{% block content %}
-<div class="container">
-  <div class="row-fluid">
-    <div class="span12">
-      <section>
-        <header>
-          <h2>All Projects</h2>
-        </header>
-        <div class="section-content">
-          <table class="table table-striped">
-            <thead>
-              <tr>
-                <th>Created</th>
-                <th>Name</th>
-                <th>Messages</th>
-                <th></th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for project in pagination.items %}
-              <tr>
-                <td nowrap>{{ project.created|pretty }}</td>
-                <td style="width: 100%;">{{ repo_link(project) }}</td>
-                <td style="text-align: center;">{{ project.message_count }}</td>
-                <td nowrap>
-                  <div class="pull-right">
-                    <a class="btn btn-danger btn-mini" href="{{ url_for('.delete_project', pid=project.id) }}">
-                      <i class="icon-trash icon-white"></i> Delete
-                    </a>
-                  </div>
-                </td>
-              </tr>
-              {% endfor %}
-            </tbody>
-          </table>
-          {{ render_pagination(pagination, '.admin_projects', **request.args) }}
-        </div>
-      </section>
-    </div>
+{% block content_page %}
+  <h2>All Projects</h2>
+  <div class="section-content">
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>Created</th>
+          <th>Name</th>
+          <th>Messages</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for project in pagination.items %}
+        <tr>
+          <td nowrap>{{ project.created|pretty }}</td>
+          <td style="width: 100%;">{{ repo_link(project) }}</td>
+          <td style="text-align: center;">{{ project.message_count }}</td>
+          <td nowrap>
+            <div class="pull-right">
+              <a class="btn btn-danger btn-mini" href="{{ url_for('.delete_project', pid=project.id) }}">
+                <i class="icon-trash icon-white"></i> Delete
+              </a>
+            </div>
+          </td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+    {{ render_pagination(pagination, '.admin_projects', **request.args) }}
   </div>
-</div>
 {% endblock %}
