--- a/notifico/views/projects/templates/dashboard.html
+++ b/notifico/views/projects/templates/dashboard.html
@@ -1,67 +1,52 @@
-{% extends "body.html" %}
+{% extends "no_sidebar.html" %}
 
-{% block content %}
-<div class="row">
-  <div class="span12">
-    <section>
-      <header>
-        <div class="pull-left">
-          <h2>Projects ({{ projects.count() }})</h2>
-        </div>
-        <div class="pull-right">
-          {% if is_owner %}
-          <a href="{{ url_for('.new') }}" class="btn btn-success"><i class="icon-plus"></i> New Project</a>
-          {% if config.SERVICE_GITHUB_CLIENT_ID and config.SERVICE_GITHUB_CLIENT_SECRET %}
-          {# Importing from github is only enabled if you've added the OAuth tokens required for
-             the API #}
-          <a href="{{ url_for('pimport.github') }}" class="btn btn-info"><i class="icon-github-alt"></i> Sync With Github</a>
-          {% endif %}
-          {% endif %}
-        </div>
-        <div style="clear: both;"></div>
-      </header>
-      <div class="section-content">
-        {% if not projects.count() %}
-          <div class="alert alert-block">
-            {% if is_owner %}
-            You have not created any projects yet.
-            {% else %}
-            This user does not have any public projects.
-            {% endif %}
-          </div>
+{% block content_page %}
+  <h2>Projects ({{ projects.count() }})</h2>
+  <div class="section-content">
+    {% if not projects.count() %}
+      <div class="alert alert-block">
+        {% if is_owner %}
+        You have not created any projects yet.
         {% else %}
-          {% for project in projects %}
-          <div class="project">
-            {% if not project.public %}
-            <i class="icon-lock icon-2x pull-left icon-muted"></i>
-            {% endif %}
-            <div class="pull-left">
-              <div class="name">
-                <a href="{{ url_for('projects.details', u=project.owner.username, p=project.name) }}">
-                  {{ project.name }}
-                </a>
-              </div>
-              <div class="desc">
-                <small>
-                  <ul class="unstyled inline">
-                    <li>Created {{ project.created|pretty }}</li>
-                    {% if is_owner %}
-                    <li><a href="{{ url_for('.edit_project', u=user.username, p=project.name) }}"><i class="icon-pencil"></i> Edit</a></li>
-                    <li><a href="{{ url_for('.delete_project', u=user.username, p=project.name) }}"><i class="icon-trash icon-white"></i> Delete</a></li>
-                    {% endif %}
-                  </ul>
-               </small>
-              </div>
-            </div>
-            <div class="metric pull-right">
-              <i class="icon-envelope"></i> {{ project.message_count }}
-            </div>
-            <div class="clearfix"></div>
-          </div>
-          {% endfor %}
+        This user does not have any public projects.
         {% endif %}
       </div>
-    </section>
+    {% else %}
+      {% for project in projects %}
+      <div class="project">
+        {% if not project.public %}
+        <i class="icon-lock icon-2x pull-left icon-muted"></i>
+        {% endif %}
+        <div class="pull-left">
+          <div class="name">
+            <a href="{{ url_for('projects.details', u=project.owner.username, p=project.name) }}">
+              {{ project.name }}
+            </a>
+          </div>
+          <div class="desc">
+            <small>
+              <ul class="unstyled inline">
+                <li>Created {{ project.created|pretty }}</li>
+                {% if is_owner %}
+                <li><a href="{{ url_for('.edit_project', u=user.username, p=project.name) }}"><i class="icon-pencil"></i> Edit</a></li>
+                <li><a href="{{ url_for('.delete_project', u=user.username, p=project.name) }}"><i class="icon-trash icon-white"></i> Delete</a></li>
+                {% endif %}
+              </ul>
+           </small>
+          </div>
+        </div>
+        <div class="metric pull-right">
+          <i class="icon-envelope"></i> {{ project.message_count }}
+        </div>
+        <div class="clearfix"></div>
+      </div>
+      {% endfor %}
+    {% endif %}
+    {% if is_owner %}
+    <a href="{{ url_for('.new') }}" class="btn btn-success"><i class="icon-plus"></i> New Project</a>
+    {% if config.SERVICE_GITHUB_CLIENT_ID and config.SERVICE_GITHUB_CLIENT_SECRET %}
+      <a href="{{ url_for('pimport.github') }}" class="btn btn-info"><i class="icon-github-alt"></i> Sync With Github</a>
+    {% endif %}
+    {% endif %}
   </div>
-</div>
 {% endblock %}
