--- a/notifico/views/projects/templates/edit_hook.html
+++ b/notifico/views/projects/templates/edit_hook.html
@@ -1,4 +1,4 @@
-{% extends "body.html" %}
+{% extends "no_sidebar.html" %}
 {% import "ui/forms.html" as forms %}
 
 {% block style %}
@@ -16,37 +16,27 @@ $(document).ready(function(){
 </script>
 {% endblock %}
 
-{% block content %}
-<div class="container page-content">
-  <div class="row-fluid">
-    <div class="span12">
-      <section>
-        <header>
-          <h2>Edit Hook</h2>
-        </header>
-        <div class="section-content">
-          {{ service.service_description()|safe }}
-          <div class="row-fluid" style="margin-top: 20px;">
-            <div class="span12">
-              <form class="form form-horizontal" method='POST' action="{{ request.url }}">
-                {% if form %}
-                {{ form.hidden_tag() }}
-                {% for field in form %}
-                  {% if field.id != 'csrf_token' %}
-                    {{ forms.render_field(field) }}
-                  {% endif %}
-                {% endfor %}
-                {% endif %}
-                <div class="form-actions">
-                  <button type="submit" class="btn btn-primary">Save Changes</button>
-                  <a href="{{ url_for('.details', u=g.user.username, p=project.name) }}" class="btn">Cancel</a>
-                </div>
-              </form>
-            </div>
+{% block content_page %}
+  <h2>Edit Hook</h2>
+  <div class="section-content">
+    {{ service.service_description()|safe }}
+    <div class="row-fluid" style="margin-top: 20px;">
+      <div class="span12">
+        <form class="form form-horizontal" method='POST' action="{{ request.url }}">
+          {% if form %}
+          {{ form.hidden_tag() }}
+          {% for field in form %}
+            {% if field.id != 'csrf_token' %}
+              {{ forms.render_field(field) }}
+            {% endif %}
+          {% endfor %}
+          {% endif %}
+          <div class="form-actions">
+            <button type="submit" class="btn btn-primary">Save Changes</button>
+            <a href="{{ url_for('.details', u=g.user.username, p=project.name) }}" class="btn">Cancel</a>
           </div>
-        </div>
-      </section>
+        </form>
+      </div>
     </div>
   </div>
-</div>
 {% endblock %}
