--- a/notifico/views/projects/templates/new_hook.html
+++ b/notifico/views/projects/templates/new_hook.html
@@ -1,4 +1,4 @@
-{% extends "body.html" %}
+{% extends "no_sidebar.html" %}
 {% import "ui/forms.html" as forms %}
 
 {% block style %}
@@ -16,54 +16,44 @@ $(document).ready(function(){
 </script>
 {% endblock %}
 
-{% block content %}
-<div class="container page-content">
-  <div class="row-fluid">
-    <div class="span12">
-      <section>
-        <header>
-          <h2>New Hook</h2>
-        </header>
-        <div class="section-content">
-          <div class="row-fluid">
-            <div class="span4">
-              <ul class="nav nav-list">
-                <li class="nav-header">Available Services</li>
-                {% for s in services.values() %}
-                <li {% if s.SERVICE_ID == service.SERVICE_ID %}class="active"{% endif %}>
-                  <a href="{{ url_for('.new_hook', u=g.user.username, p=project.name, sid=s.SERVICE_ID) }}">
-                    {{ s.SERVICE_NAME }}
-                  </a>
-                </li>
-                {% endfor %}
-              </ul>
-            </div>
-            <div class="span8">
-              <h2>{{ service.SERVICE_NAME }}</h2>
-              {{ service.service_description()|safe }}
-              <div class="row-fluid" style="margin-top: 20px;">
-                <div class="span12">
-                  <form class="form form-horizontal" method='POST' action="{{ request.url }}">
-                    {% if form %}
-                    {{ form.hidden_tag() }}
-                    {% for field in form %}
-                      {% if field.id != 'csrf_token' %}
-                        {{ forms.render_field(field) }}
-                      {% endif %}
-                    {% endfor %}
-                    {% endif %}
-                    <div class="form-actions">
-                      <button type="submit" class="btn btn-primary">Create Hook</button>
-                      <a href="{{ url_for('.details', u=g.user.username, p=project.name) }}" class="btn">Cancel</a>
-                    </div>
-                  </form>
-                </div>
+{% block content_page %}
+  <h2>New Hook</h2>
+  <div class="section-content">
+    <div class="row-fluid">
+      <div class="span4">
+        <ul class="nav nav-list">
+          <li class="nav-header">Available Services</li>
+          {% for s in services.values() %}
+          <li {% if s.SERVICE_ID == service.SERVICE_ID %}class="active"{% endif %}>
+            <a href="{{ url_for('.new_hook', u=g.user.username, p=project.name, sid=s.SERVICE_ID) }}">
+              {{ s.SERVICE_NAME }}
+            </a>
+          </li>
+          {% endfor %}
+        </ul>
+      </div>
+      <div class="span8">
+        <h2>{{ service.SERVICE_NAME }}</h2>
+        {{ service.service_description()|safe }}
+        <div class="row-fluid" style="margin-top: 20px;">
+          <div class="span12">
+            <form class="form form-horizontal" method='POST' action="{{ request.url }}">
+              {% if form %}
+              {{ form.hidden_tag() }}
+              {% for field in form %}
+                {% if field.id != 'csrf_token' %}
+                  {{ forms.render_field(field) }}
+                {% endif %}
+              {% endfor %}
+              {% endif %}
+              <div class="form-actions">
+                <button type="submit" class="btn btn-primary">Create Hook</button>
+                <a href="{{ url_for('.details', u=g.user.username, p=project.name) }}" class="btn">Cancel</a>
               </div>
-            </div>
+            </form>
           </div>
         </div>
-      </section>
+      </div>
     </div>
   </div>
-</div>
 {% endblock %}
