--- a/notifico/views/public/templates/landing.html
+++ b/notifico/views/public/templates/landing.html
@@ -1,83 +1,67 @@
-{% extends "body.html" %}
+{% extends "no_sidebar.html" %}
 
-{% block content %}
-<div class="container">
+{% block content_page %}
+  <h1>Notifico</h1>
+  <p>Notifico is an open-source (<a href="http://en.wikipedia.org/wiki/MIT_License">MIT</a>) replacement for the now-defunct <a href="http://cia.vc">cia.vc</a> service. Notifico receives messages (such as commits and issues) from services and scripts and delivers them to IRC channels.</p>
+  <p>Notifico has served <strong>{{ total_messages }}</strong> messages for <strong>{{ total_users }}</strong> users across <strong>{{ new_projects.total }}</strong> projects.</p>
   {% if not g.user %}
-  <div class="row-fluid">
-    <div class="span12">
-      <div class="hero-unit homepage-unit">
-        <h1>Notifico<sup>β</sup></h1>
-        <p>Notifico is an open-source (<a href="http://en.wikipedia.org/wiki/MIT_License">MIT</a>) replacement for the now-defunct <a href="http://cia.vc">cia.vc</a> service. Notifico receives messages (such as commits and issues) from services and scripts and delivers them to IRC channels.</p>
-        <p>Notifico has served <strong>{{ total_messages }}</strong> messages for <strong>{{ total_users }}</strong> users across <strong>{{ new_projects.total }}</strong> projects.</p>
-      <p><a class="btn btn-primary btn-large" href="{{ url_for('account.register') }}">Sign Up</a></p>
-      <p><small class="muted">Already have an account? <a href="{{ url_for('account.login') }}">Login</a></small></p>
-      </div>
-    </div>
-  </div>
+  <p><a class="btn btn-primary btn-large" href="{{ url_for('account.register') }}">Sign Up</a></p>
+  <p><small class="muted">Already have an account? <a href="{{ url_for('account.login') }}">Login</a></small></p>
   {% endif %}
 
   <div class="row-fluid">
     <div class="span6">
       {# Show recently sent messages from public channels. #}
-      <section>
-        <header>
-          <h3>Newest Projects</h3>
-        </header>
-        <div class="section-content">
-          <table class="table table-striped table-vertical">
-            <thead>
-              <tr>
-                <th>Created</th>
-                <th>Name</th>
-                <th>Messages</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for project in new_projects.items %}
-              <tr>
-                <td nowrap>{{ project.created|pretty }}</td>
-                <td style="width: 100%;">
-                  {{ repo_link(project) }}
-                </td>
-                <td style="text-align: center;">{{ project.message_count }}</td>
-              </tr>
-              {% endfor %}
-            </tbody>
-          </table>
-          <a class="btn btn-info" href="{{ url_for('.projects') }}">See All {{ new_projects.total }} Projects</a>
-        </div>
-      </section>
+      <h3>Newest Projects</h3>
+      <div class="section-content">
+        <table class="table table-striped table-vertical">
+          <thead>
+            <tr>
+              <th>Created</th>
+              <th>Name</th>
+              <th>Messages</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for project in new_projects.items %}
+            <tr>
+              <td nowrap>{{ project.created|pretty }}</td>
+              <td style="width: 100%;">
+                {{ repo_link(project) }}
+              </td>
+              <td style="text-align: center;">{{ project.message_count }}</td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+        <a class="btn btn-info" href="{{ url_for('.projects') }}">See All {{ new_projects.total }} Projects</a>
+      </div>
     </div>
     <div class="span6">
-      <section>
-        <header>
-          <h3>Top Networks</h3>
-        </header>
-        <div class="section-content">
-          <table class="table table-striped table-vertical">
-            <thead>
-              <tr>
-                <th>Host</th>
-                <th>Channels</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for network, count in top_networks %}
-              <tr>
-                <td style="width: 100%;">{{ network }}</td>
-                <td  nowrap style="text-align: center;">
-                  <a href="{{ url_for('.network', network=network) }}">
-                    {{ count }}
-                  </a>
-                </td>
-              </tr>
-              {% endfor %}
-            </tbody>
-          </table>
-          <a class="btn btn-info" href="{{ url_for('.networks') }}">See All {{ total_networks }} Networks</a>
-        </div>
-      </section>
+      <h3>Top Networks</h3>
+      <div class="section-content">
+        <table class="table table-striped table-vertical">
+          <thead>
+            <tr>
+              <th>Host</th>
+              <th>Channels</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for network, count in top_networks %}
+            <tr>
+              <td style="width: 100%;">{{ network }}</td>
+              <td  nowrap style="text-align: center;">
+                <a href="{{ url_for('.network', network=network) }}">
+                  {{ count }}
+                </a>
+              </td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+        <a class="btn btn-info" href="{{ url_for('.networks') }}">See All {{ total_networks }} Networks</a>
+      </div>
     </div>
   </div>
-</div>
 {% endblock %}
