--- a/notifico/views/public/templates/networks.html
+++ b/notifico/views/public/templates/networks.html
@@ -1,45 +1,35 @@
-{% extends "body.html" %}
+{% extends "no_sidebar.html" %}
 {% from 'ui/page.html' import render_pagination %}
 
-{% block content %}
-<div class="container">
-  <div class="row">
-    <div class="span12">
-      <section>
-        <header>
-          <h3>Networks</h3>
-        </header>
-        <div class="section-content">
-          <table class="table table-striped table-vertical">
-            <thead>
-              <tr>
-                <th>Host</th>
-                <th style="text-align: center;">Channels (Unique)</th>
-                <th style="text-align: center;">Channels (Total)</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for network, di_count, count in pagination.items %}
-              <tr>
-                <td style="width: 100%;">{{ network }}</td>
-                <td nowrap style="text-align: center;">
-                  <a href="{{ url_for('.network', network=network) }}">
-                    {{ di_count }}
-                  </a>
-                </td>
-                <td nowrap style="text-align: center;">
-                  <a href="{{ url_for('.network', network=network) }}">
-                    {{ count }}
-                  </a>
-                </td>
-              </tr>
-              {% endfor %}
-            </tbody>
-          </table>
-          {{ render_pagination(pagination, '.networks', **request.args) }}
-        </div>
-      </section>
-    </div>
+{% block content_page %}
+  <h3>Networks</h3>
+  <div class="section-content">
+    <table class="table table-striped table-vertical">
+      <thead>
+        <tr>
+          <th>Host</th>
+          <th style="text-align: center;">Channels (Unique)</th>
+          <th style="text-align: center;">Channels (Total)</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for network, di_count, count in pagination.items %}
+        <tr>
+          <td style="width: 100%;">{{ network }}</td>
+          <td nowrap style="text-align: center;">
+            <a href="{{ url_for('.network', network=network) }}">
+              {{ di_count }}
+            </a>
+          </td>
+          <td nowrap style="text-align: center;">
+            <a href="{{ url_for('.network', network=network) }}">
+              {{ count }}
+            </a>
+          </td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+    {{ render_pagination(pagination, '.networks', **request.args) }}
   </div>
-</div>
 {% endblock %}
