--- a/notifico/views/public/templates/users.html
+++ b/notifico/views/public/templates/users.html
@@ -1,37 +1,27 @@
-{% extends "body.html" %}
+{% extends "no_sidebar.html" %}
 {% from "ui/page.html" import render_pagination %}
 
-{% block content %}
-<div class="container page-content">
-  <div class="row-fluid">
-    <div class="span12">
-      <section>
-        <header>
-          <h2>Users</h2>
-        </header>
-        <div class="section-content">
-          <table class="table table-vertical table-striped">
-            <thead>
-              <tr>
-                <th>Joined</th>
-                <th>Username</th>
-                <th nowrap>Public Projects</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for user in pagination.items %}
-              <tr>
-                <td nowrap>{{ user.joined|pretty }}</td>
-                <td style="width: 100%;"><a href="{{ url_for('projects.dashboard', u=user.username) }}">{{ user.username }}</a></td>
-                <td style="text-align: center;">{{ user.projects.filter_by(public=True).count() }}</td>
-              </tr>
-              {% endfor %}
-            </tbody>
-          </table>
-          {{ render_pagination(pagination, '.users', **request.args) }}
-        </div>
-      </section>
-    </div>
+{% block content_page %}
+  <h2>Users</h2>
+  <div class="section-content">
+    <table class="table table-vertical table-striped">
+      <thead>
+        <tr>
+          <th>Joined</th>
+          <th>Username</th>
+          <th nowrap>Public Projects</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for user in pagination.items %}
+        <tr>
+          <td nowrap>{{ user.joined|pretty }}</td>
+          <td style="width: 100%;"><a href="{{ url_for('projects.dashboard', u=user.username) }}">{{ user.username }}</a></td>
+          <td style="text-align: center;">{{ user.projects.filter_by(public=True).count() }}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+    {{ render_pagination(pagination, '.users', **request.args) }}
   </div>
-</div>
 {% endblock %}
