--- a/notifico/static/css/bootstrap.css
+++ b/notifico/static/css/bootstrap.css
@@ -6440,16 +6440,17 @@ ol.inline > li {
   background-image: linear-gradient(to bottom, #ffffff, #ffffff);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffffffff', GradientType=0);
-  border-bottom: 2px solid #ccc;
 }
 .nav-container .nav-top {
   margin-bottom: 0;
+  padding: 10px 20px 0 20px;
 }
 .nav-container .nav-top .navbar-inner {
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0;
   border: none;
+  border-bottom: 2px solid black;
   background-color: #ffffff;
   background-image: -moz-linear-gradient(top, #ffffff, #ffffff);
   background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#ffffff));
@@ -6461,17 +6462,31 @@ ol.inline > li {
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
+  padding-left: 0px;
+  padding-right: 0px;
 }
 .nav-container .nav-top .navbar-inner .brand {
   text-shadow: none;
+  color: #000000;
+  font-weight: 600;
 }
-.nav-container .nav-top .navbar-inner .nav li a {
+.nav-container .nav-top .navbar-inner .nav li a,
+.nav-container .nav-top .navbar-inner .nav .active > li a {
   text-shadow: none;
+  color: #000000;
+  background-color: #ffffff;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
 }
-.nav-container .nav-top .navbar-inner .nav li .dropdown-menu {
+.nav-container .nav-top .navbar-inner .nav li .dropdown-menu,
+.nav-container .nav-top .navbar-inner .nav .active > li .dropdown-menu {
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0;
+}
+.nav-container .nav-top .navbar-inner .nav .active > li > a {
+  text-decoration: underline;
 }
 .content {
   padding-bottom: 20px;
@@ -6494,7 +6509,7 @@ ol.inline > li {
   text-transform: uppercase;
   padding-bottom: 10px;
   margin-bottom: 20px;
-  border-bottom: 1px solid #EEE;
+  border-bottom: 2px solid #EEE;
 }
 .footer {
   position: relative;
