--- a/notifico/templates/body.html
+++ b/notifico/templates/body.html
@@ -66,7 +66,7 @@
                 <!-- User settings and actions  -->
                 <li class="dropdown {{ active('account.') }}">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                      <i class="icon-user"></i> Settings
+                      <i class="icon-user"></i> {{ g.user.username }} <i class="icon-angle-down"></i> 
                   </a>
                   <ul class="dropdown-menu">
                       <li>
