Slight styling tweaks, prepping for new graphs. Small footer padding fix. NODEPLOY

--- a/notifico/static/css/bootstrap.css
+++ b/notifico/static/css/bootstrap.css
@@ -6513,11 +6513,15 @@ ol.inline > li {
 }
 .footer {
   position: relative;
-  margin-top: -40px;
+  margin-top: -48px;
   clear: both;
   padding-top: 10px;
-  padding-bottom: 8px;
   font-size: 75%;
+}
+.footer .footer-copyright {
+  border-top: solid #EEE 2px;
+  padding-top: 8px;
+  padding-bottom: 8px;
 }
 .pull-right {
   float: right;
