--- a/notifico/static/less/custom.less
+++ b/notifico/static/less/custom.less
@@ -72,10 +72,6 @@ form {
   .name {
     font-size: 16px;
   }
-
-  .metric {
-
-  }
 }
 
 ul.inline,
@@ -185,10 +181,15 @@ ol.inline > li {
 
 .footer {
   position: relative;
-  margin-top: -40px;
+  margin-top: -48px;
   clear: both;
 
   padding-top: 10px;
-  padding-bottom: 8px;
   font-size: 75%;
+
+  .footer-copyright {
+    border-top: solid #EEE 2px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+  }
 }
