--- a/notifico/templates/body.html
+++ b/notifico/templates/body.html
@@ -100,19 +100,16 @@
           </div>
         </div>
       </div>
-
       <div class="container content">
         {% block content %}
         {% endblock content %}
       </div>
-
     </div>
     <div class="footer">
       <div class="container">
-        <div class="row">
-          <div class="span12" style="text-align: right;">
+        <div class="row-fluid">
+          <div class="span12 footer-copyright">
             Copyright &copy; <span class="current_year">2013</span> Tyler Kennedy
-            | <a href="https://github.com/TkTech/notifico">Get The Code</a>
           </div>
         </div>
       </div>
