--- a/notifico/static/less/custom.less
+++ b/notifico/static/less/custom.less
@@ -150,7 +150,7 @@ ol.inline > li {
   @sidebar_background: white;
   @content_background: white;
 
-  padding-bottom: 20px;
+  padding-bottom: 48px;
   padding-top: 20px;
 
   .content_main {
@@ -188,8 +188,6 @@ ol.inline > li {
   font-size: 75%;
 
   .footer-copyright {
-    border-top: solid #EEE 2px;
-    padding-top: 8px;
-    padding-bottom: 8px;
+    padding: 8px 20px 0 20px;
   }
 }
