--- a/notifico/views/public/templates/landing.html
+++ b/notifico/views/public/templates/landing.html
@@ -1,12 +1,125 @@
 {% extends "no_sidebar.html" %}
 
+{% block script %}
+  {{ super() }}
+  <!--[if lte IE 8]><script language="javascript" type="text/javascript" src="excanvas.min.js"></script><![endif]-->
+  <script type="text/javascript" src="/js/jquery.flot.js"></script>
+  <script type="text/javascript" src="/js/jquery.flot.resize.js"></script>
+  <script type="text/javascript" src="/js/jquery.flot.tooltip.min.js"></script>
+  <script type="text/javascript">
+  $(document).ready(function(){
+    $.plot(
+      "#projects-placeholder",
+      // Graph Data
+      [{
+        'data': {{ projects_graph_data|tojson|safe }},
+        'color': '#2E8DEF',
+        'points': {fillColor: "#fff"}
+      }],
+      // Options
+      {
+        // Format the xaxis for timestamps
+        'xaxis': {
+          'mode': "time",
+          'timeformat': "%b/%d",
+          'tickColor': 'transparent'
+        },
+        'yaxis': {
+          'tickColor': 'transparent'
+        },
+        // Give a bit of padding between the chart and axis labels
+        'grid': {
+          'borderColor': 'transparent',
+          'hoverable': true
+        },
+        'series': {
+          'lines': {
+            'lineWidth': 4,
+            'show': true
+          },
+          'points': {
+            'show': true,
+            'radius': 5
+          }
+        },
+        'tooltip': true,
+        'tooltipOpts': {
+          'content': '%y'
+        }
+      }
+    );
+  });
+  </script>
+{% endblock script %}
+
 {% block content_page %}
 <div class="landing-unit">
   <h1 class="landing-unit-title">Notifico</h1>
   <p class="lead">Notifico is an <a href="https://github.com/TkTech/notifico">open-source</a> replacement for the now-defunct <a href="http://cia.vc">cia.vc</a> service. Notifico receives messages from services and scripts and delivers them to IRC channels.</p>
   {% if not g.user %}
-  <p><a class="btn btn-primary btn-large" href="{{ url_for('account.register') }}">Sign Up</a></p>
+  <p><a class="btn btn-success btn-large" href="{{ url_for('account.register') }}">Sign Up</a></p>
   <p><small class="muted">Already have an account? <a href="{{ url_for('account.login') }}">Login</a> instead.</small></p>
   {% endif %}
+</div>
+<div class="row-fluid">
+  <div class="span12">
+    <h2>Projects</h2>
+    <div id="projects-placeholder" style="width: 100%; height: 200px;"></div>
+  </div>
+</div>
+<div class="row-fluid">
+  <div class="span6">
+    {# Show recently sent messages from public channels. #}
+    <h3>Newest Projects</h3>
+    <div class="section-content">
+      <table class="table table-striped table-vertical">
+        <thead>
+          <tr>
+            <th>Created</th>
+            <th>Name</th>
+            <th>Messages</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for project in new_projects.items %}
+          <tr>
+            <td nowrap>{{ project.created|pretty }}</td>
+            <td style="width: 100%;">
+              {{ repo_link(project) }}
+            </td>
+            <td style="text-align: center;">{{ project.message_count }}</td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+      <a class="btn btn-info" href="{{ url_for('.projects') }}">See All {{ new_projects.total }} Projects</a>
+    </div>
+  </div>
+  <div class="span6">
+    <h3>Top Networks</h3>
+    <div class="section-content">
+      <table class="table table-striped table-vertical">
+        <thead>
+          <tr>
+            <th>Host</th>
+            <th>Channels</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for network, count in top_networks %}
+          <tr>
+            <td style="width: 100%;">{{ network }}</td>
+            <td  nowrap style="text-align: center;">
+              <a href="{{ url_for('.network', network=network) }}">
+                {{ count }}
+              </a>
+            </td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+      <a class="btn btn-info" href="{{ url_for('.networks') }}">See All {{ total_networks }} Networks</a>
+    </div>
+  </div>
 </div>
 {% endblock %}
