--- a/notifico/views/public/templates/landing.html
+++ b/notifico/views/public/templates/landing.html
@@ -72,7 +72,7 @@
     {# Show recently sent messages from public channels. #}
     <h3>Newest Projects</h3>
     <div class="section-content">
-      <table class="table table-striped table-vertical">
+      <table class="table table-striped table-vertical table-bordered">
         <thead>
           <tr>
             <th>Created</th>
@@ -98,7 +98,7 @@
   <div class="span6">
     <h3>Top Networks</h3>
     <div class="section-content">
-      <table class="table table-striped table-vertical">
+      <table class="table table-striped table-vertical table-bordered">
         <thead>
           <tr>
             <th>Host</th>
