--- a/notifico/views/projects/templates/project_details.html
+++ b/notifico/views/projects/templates/project_details.html
@@ -5,12 +5,12 @@
   <h2>{{ repo_link(project) }}</h2>
   <ul class="unstyled">
     <li>
-      <i class="icon-time"></i> Created {{ project.created|pretty }}
+      <i class="icon-time"></i> Created {{ project.created|pretty_date }}
     </li>
     {% if project.website %}
     <li>
       <i class="icon-globe"></i>
-      {{ project.website|fixlink|urlize(80, true) }}
+      {{ project.website|fix_link|urlize(80, true) }}
     </li>
     {% endif %}
   </ul>
