--- a/notifico/views/public/templates/landing.html
+++ b/notifico/views/public/templates/landing.html
@@ -83,7 +83,7 @@
         <tbody>
           {% for project in new_projects.items %}
           <tr>
-            <td nowrap>{{ project.created|pretty }}</td>
+            <td nowrap>{{ project.created|pretty_date }}</td>
             <td style="width: 100%;">
               {{ repo_link(project) }}
             </td>
